package com.talento_tech.BolsaEmpleo.Entities;

public enum tipoID {
    CEDULA,
    PASAPORTE,
    RUT,
    NIT,
    PERMISO_DE_TRABAJO,
    OTRO,
}
